--- a/Origamid/Exercicios/Portfolio/index.html
+++ b/Origamid/Exercicios/Portfolio/index.html
@@ -27,6 +27,49 @@
     </div>
   </main>
 
+  <section class="experiencia" id="experiencia" aria-label="Experiência">
+    <h2 class="subtitulo">Experiência</h2>
+    <div class="experiencia-texto">
+      <p>Desenvolvo pequenos projetos como o Bickcraft utilizando apenas <strong> HTML </strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+    </div>
+
+    <div class="empresa">
+      <span class="empresa-ano">2045</span>
+      <h3 class="empresa-titulo">Bickcraft</h3>
+      <span class="empresa-titulo">Desenvolvedor Júnior</span>
+      <p class="empresa-texto">No projeto Bickcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript do site. Além disso, também prestei consultoria no Design</p>
+      <ul class="empresa-habilidades">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>UX Design</li>
+        <li>UI Design</li>
+      </ul>
+    </div>
+
+    <div class="empresa">
+      <span class="empresa-ano">2044-45</span>
+      <h3 class="empresa-titulo">Surfbot</h3>
+      <span class="empresa-titulo">Estagiário</span>
+      <p class="empresa-texto">Surfbot é uma empresa que oferece aulas de surf no Rio de Janeiro. Todo o projeto foi feito do zero. </p>
+      <ul class="empresa-habilidades">
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+
+    <div class="empresa">
+      <span class="empresa-ano">2044</span>
+      <h3 class="empresa-titulo">Brafé</h3>
+      <span class="empresa-titulo">Desenvolvedor Júnior</span>
+      <p class="empresa-texto">Mais de 3 projetos foram desenvolvimdos para a empresa Brafé. Eu trabalhei na criação do emai marketing e também no HTML. </p>
+      <ul class="empresa-habilidades">
+        <li>Email Marketing</li>
+        <li>HTML</li>
+      </ul>
+    </div>
+  </section>
 
 </body>
 </html>
